# State-Conditioned-Hypergraph-Fusion-for-PPAR-Gamma-Ligands

./: .gitignore  README.md  conda-env.yml  env-activate.sh  pyproject.toml
configs/: data.yml
notebooks/: dataset.ipynb  ligand_embedding_analysis.ipynb  visualize_graphs.ipynb  visualize_pocket_selection.ipynb
src/: main.py
src/pprag/dataio/: LIGAND_CLEANING.md  README.md  build_dataset.py  encode_labels.py  load_labels.py  murcko.py  pocket_select.py  prep_main.py  schema.py  split_bulk_graphs.py  splits.py  validate_ligands.py
src/pprag/encoder/: layers_hypergraph.py  ligand_encoder.py  ligand_encoder_runner.py  pocket_encoder.py  pocket_encoder_runner.py  pretrain.py  pretrain_runner.py
src/pprag/fusion/: .gitkeep
src/pprag/graphs/: README_GRAPH_BUILDERS.md  build_dataset.py  ligand_builder.py  pocket_builder.py
src/pprag/pred/: .gitkeep
